# monty

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  generational-arena-hybrid.md  how-it-works.md  pyproject.toml
.github/workflows/: ci.yml
crates/monty/: Cargo.toml
crates/monty-cli/src/: main.rs
crates/monty-esp32/: .gitignore  Cargo.toml  build.rs  demo.monty  partitions-4mb.csv  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
crates/monty-esp32/.cargo/: config.toml
crates/monty-esp32/src/: main.rs
crates/monty-python/: exercise.py
crates/monty-python/src/: convert.rs  limits.rs
crates/monty-python/tests/: test_readme_examples.py  test_types.py
crates/monty-typeshed/: Cargo.toml  README.md  build.rs
crates/monty/benches/: main.rs
crates/monty/src/: args.rs  builtins.rs  callable.rs  evaluate.rs  exception.rs  exception_private.rs  exceptions.rs  executor.rs  expressions.rs  for_iterator.rs  fstring.rs  function.rs  heap.rs  io.rs  lib.rs  namespace.rs  object.rs  parse.rs  parser.rs  prepare.rs  run.rs  run_frame.rs  signature.rs  value.rs
crates/monty/src/builtins/: abs.rs  bin.rs  chr.rs  divmod.rs  enumerate.rs  hash.rs  hex.rs  isinstance.rs  min_max.rs  oct.rs  ord.rs  pow.rs  print.rs  round.rs  sorted.rs  sum.rs  type_.rs
crates/monty/src/bytecode/: compiler.rs  mod.rs  op.rs
crates/monty/src/bytecode/vm/: binary.rs  call.rs  collections.rs  exceptions.rs  format.rs  mod.rs
crates/monty/src/types/: bytes.rs  dataclass.rs  dict.rs  list.rs  mod.rs  py_trait.rs  range.rs  set.rs  slice.rs  str.rs  tuple.rs  type.rs
crates/monty/test_cases/: frozenset__ops.py  fstring__all.py  set__ops.py  set__review_bugs.py  slice__invalid_indices.py  slice__kwargs.py  slice__no_args.py  slice__ops.py  slice__step_zero.py  slice__step_zero_bytes.py  slice__step_zero_range.py  slice__step_zero_str.py  slice__step_zero_tuple.py  slice__too_many_args.py  traceback__set_mutation.py  type__builtin_attr_error.py
crates/monty/tests/: datatest_runner.rs  iter.rs  print_writer.rs  resource_limits.rs  try_from.rs
scripts/: flamegraph_to_text.py  run_traceback.py
src/: args.rs  evaluate.rs  exceptions.rs  exit.rs  expressions.rs  main.rs  operators.rs  parse.rs  prepare.rs
test_cases/: bytes__len_basic.py  bytes__len_basic_repr.py  bytes__len_basic_str.py  bytes__len_empty.py  bytes__len_empty_repr.py  bytes__len_empty_str.py  bytes__method_bytes_repr.py  bytes__method_bytes_str.py  bytes__method_bytes_type.py  edge__all_empty.py  edge__float_int_mod.py  edge__int_float_mod.py  edge__large_list_concat.py  edge__large_string_concat.py  edge__list_self_concat_twice.py  edge__mod_comparison_chain.py  execute_ok__add_ints.py  execute_ok__add_strs.py  execute_ok__bytes_equal.py  execute_ok__bytes_equal2.py  execute_ok__discard_list.py  execute_ok__for_loop_str_append_assign.py  execute_ok__for_loop_str_append_assign_op.py  execute_ok__ints_equal.py  execute_ok__list_equal.py  execute_ok__list_repr.py  execute_ok__list_str.py  execute_ok__method_bool_false_repr.py  execute_ok__method_bool_false_str.py  execute_ok__method_bool_false_type.py  execute_ok__method_bool_true_repr.py  execute_ok__method_bool_true_str.py  execute_ok__method_bool_true_type.py  execute_ok__method_ellipsis_repr.py  execute_ok__method_ellipsis_str.py  execute_ok__method_ellipsis_type.py  execute_ok__method_none_repr.py  execute_ok__method_none_str.py  execute_ok__method_none_type.py  execute_ok__shared_list_append.py  (+192 more)
tests/: datatest_runner.rs
