[workspace]
resolver = "2"
members = ["crates/monty", "crates/monty-cli", "crates/monty-python", "crates/monty-js", "crates/monty-type-checking", "crates/monty-typeshed"]
exclude = ["crates/monty-esp32"]

[workspace.package]
edition = "2024"
version = "0.0.3"
rust-version = "1.90"
license = "MIT"
authors = ["Samuel Colvin <samuel@pydantic.dev>"]
description = "A sandboxed, snapshotable Python interpreter written in Rust."
categories = ["compilers", "emulators", "development-tools"]
keywords = ["python", "interpreter", "sandbox", "embedded"]
homepage = "https://github.com/pydantic/monty/"
repository = "https://github.com/pydantic/monty/"
documentation = "https://github.com/pydantic/monty/"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false
lto = false

[workspace.dependencies]
# ruff, ty and related crates
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_python_parser", branch = "main" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_python_ast", branch = "main" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_text_size", branch = "main" }
ruff_db = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_db", branch = "main", features = ["serde"] }
ty_python_semantic = { git = "https://github.com/astral-sh/ruff.git", package = "ty_python_semantic", branch = "main" }
ty_module_resolver = { git = "https://github.com/astral-sh/ruff.git", package = "ty_module_resolver", branch = "main" }
ty_vendored = { git = "https://github.com/astral-sh/ruff.git", package = "ty_vendored", branch = "main" }
# salsa version matches current main of ruff
salsa = { git = "https://github.com/salsa-rs/salsa.git", rev = "9860ff6ca0f1f8f3a8d6b832020002790b501254", default-features = false, features = [
    "compact_str",
    "macros",
    "salsa_unstable",
    "inventory",
] }
# bigint and related crates
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-integer = "0.1"
# others
indexmap = { version = "2.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.1", features = ["alloc"] }
pretty_assertions = "1.4"

[workspace.lints.rust]
# codspeed cfg is set by codspeed-criterion-compat when running in CodSpeed environment
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(codspeed)'] }

[workspace.lints.clippy]
dbg_macro = "warn"
use_self = "warn"
allow_attributes = "warn"

# in general we lint against the pedantic group, but we will whitelist
# certain lints which we don't want to enforce
pedantic = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
doc_markdown = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
similar_names = "allow"
too_many_lines = "allow"
