[project]
name = "monty"
version = "0"
requires-python = ">=3.14"

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "ruff>=0.14.7",
]

# https://beta.ruff.rs/docs/configuration/
[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "Q",      # https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "RUF100", # https://docs.astral.sh/ruff/rules/unused-noqa/
    "C90",    # https://docs.astral.sh/ruff/rules/#mccabe-c90
    "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "I",      # https://docs.astral.sh/ruff/rules/#isort-i
    "DTZ005", # https://docs.astral.sh/ruff/rules/call-datetime-now-without-tzinfo/
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
isort = { combine-as-imports = true }
mccabe = { max-complexity = 14 }
ignore = [
    "F632", # ignore replace `is` with `==` - we have lots of these tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
quote-style = "single"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
include = ["scripts", "test_cases"]
venv = ".venv"

[[tool.pyright.executionEnvironments]]
root = "test_cases"
reportUnusedExpression = false
reportOperatorIssue = false
reportGeneralTypeIssues = false
reportUnknownMemberType = false
reportUnnecessaryComparison = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnhashable = false
reportCallIssue = false
