[project]
name = "monty-workspace"
version = "0"
requires-python = ">=3.10"

[tool.uv.workspace]
members = ["crates/monty-python"]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "maturin>=1.0,<2.0",
    "mypy>=1.19.1",
    "ruff>=0.14.7",
]

# https://beta.ruff.rs/docs/configuration/
[tool.ruff]
line-length = 120
include = [
    "scripts/**/*.py",
    "crates/**/*.py",
    "crates/**/*.pyi",
]
# Exclude files with intentional syntax errors (used for testing parse error handling)
extend-exclude = [
    "crates/monty/test_cases/nonlocal__error_module_level.py",
    "crates/monty/test_cases/traceback__nonlocal_module_scope.py",
]

[tool.ruff.lint]
extend-select = [
    "Q",      # https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "RUF100", # https://docs.astral.sh/ruff/rules/unused-noqa/
    "I",      # https://docs.astral.sh/ruff/rules/#isort-i
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
mccabe = { max-complexity = 14 }

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["monty"]

[tool.ruff.lint.per-file-ignores]
"crates/monty/test_cases/*.py" = [
    "E722", # bare except - needed for testing try/except with bare except clauses
    "E711", # Comparison to `None` should be `cond is None`
    "E712", # Comparison to True/False - needed for testing boolean behavior
    "E714", # Test for object identity should be `is not`
    "E721", # Use `is` and `is not` for type comparisons, or `isinstance()` for isinstance checks
    "F541", # f-string without any placeholders
    "F632", # ignore replace `is` with `==` - we have lots of these tests
    "F811", # Redefinition of unused variable
    "F821", # traceback undefined call test intentionally uses undefined name
    "F841", # unused variable - needed for testing exception variable cleanup
]
"crates/monty-typeshed/vendor/typeshed/stdlib/**/*.pyi" = [
    "F403", # unable to detect undefined names
    "F821", # Undefined name
]

[tool.ruff.format]
docstring-code-format = true
quote-style = "single"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
include = ["scripts", "crates/monty/test_cases", "crates/monty-python", "crates/monty-type-checking"]
exclude = ["crates/monty-type-checking/tests/bad_types.py", "crates/monty-type-checking/tests/reveal_types.py"]
venv = ".venv"

# we include tests cases in type checking then switch off all rules that break
# so the files don't show as errors in the IDE
[[tool.pyright.executionEnvironments]]
root = "crates/monty/test_cases"
reportUnusedExpression = false
reportOperatorIssue = false
reportGeneralTypeIssues = false
reportUnknownMemberType = false
reportUnnecessaryComparison = false
reportUnnecessaryIsInstance = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnhashable = false
reportCallIssue = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportArgumentType = false
# iter mode tests use external functions defined in the test runner
reportUndefinedVariable = false
# loop variable persistence tests have "possibly unbound" variables
reportPossiblyUnboundVariable = false
# exception variable cleanup tests intentionally access unbound variables
reportUnboundVariable = false
# attribute error tests intentionally access/assign non-existent attributes
reportAttributeAccessIssue = false
# unused variables are fine
reportUnusedVariable = false
reportAssignmentType = false
reportFunctionMemberAccess = false

[[tool.pyright.executionEnvironments]]
root = "crates/monty-type-checking"
reportUnnecessaryIsInstance = false

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
ignore-words-list = 'crate,NotIn,ser'
skip = ["crates/monty-typeshed/vendor/typeshed/stdlib/*", "Cargo.lock"]

[tool.inline-snapshot]
format-command="ruff format --stdin-filename {filename}"
