[package]
name = "monty-esp32"
version = "0.1.0"
edition = "2021"
description = "Monty Python interpreter for ESP32 devices"

[features]
default = []
# Enable Cardputer display and keyboard support
cardputer = ["dep:mipidsi", "dep:display-interface-spi", "dep:embedded-graphics"]

[dependencies]
# Monty runtime only — no parser (ruff is too large for ESP32)
monty = { path = "../monty", default-features = false }

# ESP-IDF framework (provides std support on ESP32)
esp-idf-svc = { version = "0.50", default-features = false, features = ["std", "binstart"] }
esp-idf-hal = "0.45"

# Display (ST7789V2 on the Cardputer, 240x135 LCD) — optional
mipidsi = { version = "0.8", optional = true }
display-interface-spi = { version = "0.5", optional = true }
embedded-graphics = { version = "0.8", optional = true }

# Logging
log = "0.4"

[build-dependencies]
embuild = { version = "0.32", features = ["espidf"] }
