[package]
name = "monty_typeshed"
readme = "README.md"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
ruff_db = { workspace = true }
zip = { version = "0.6.6", default-features = false }

[build-dependencies]
path-slash = "0.2.1"
walkdir = "2.3.2"
zip = { version = "0.6.6", features = ["zstd", "deflate"] }

[features]
zstd = ["zip/zstd"]
deflate = ["zip/deflate"]

[lints]
workspace = true
